# machina-trinity

./: .gitattributes  .gitignore  .secrets.env.example  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_UPLOAD_CHECKLIST.md  LICENSE  MACHINA_LLM_SETUP_GUIDE.md  MACHINA_TEST_CATALOG.md  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.th.md  README.vi.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  machina_brain_orchestrator.py  machina_config.py  machina_dispatch.py  machina_dispatch_exec.py  machina_dispatch_registry.py  machina_evolution_governor.py  machina_evolution_policy.py  machina_graph.py  machina_graph_memory.py  machina_gvu.py  machina_gvu_tracker.py  machina_learning.py  machina_learning_memory.py  machina_mcp.py  (+14 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  secret-scan.yml
core/cuda/: centroid_kernel.cu
core/include/machina/: config.h  cpq.h  crypto.h  cts.h  embedding.h  embedding_provider.h  goal_registry.h  gpu_context.h  hash.h  ids.h  json_mini.h  lease.h  log.h  plugin_api.h  plugin_loader.h  proc.h  registry.h  sandbox.h  selector.h  selector_gpu.h  serialization.h  state.h  tools.h  tx.h  types.h  wal.h
core/src/: config.cpp  crypto.cpp  cts.cpp  embedding.cpp  embedding_provider.cpp  goal_registry.cpp  gpu_context.cpp  hash.cpp  ids.cpp  lease.cpp  log.cpp  plugin_loader.cpp  proc.cpp  registry.cpp  sandbox.cpp  selector.cpp  selector_external.cpp  selector_gpu.cpp  serialization.cpp  state.cpp  tools.cpp  tx.cpp  types.cpp  wal.cpp
docs/: ARCHITECTURE.md  DEPENDENCIES.md  GITHUB_PREP_AUDIT_2026-02-13.md  LANGUAGE_STRATEGY_EN.md  LLM_BACKENDS.md  OPERATIONS.md  POLICY_DRIVER.md  QUICKSTART.md  ROADMAP.md  SERVE_API.md  ipc_schema.md
docs/i18n/: README.md
docs/i18n/ar/: EQUIVALENT_DOCSET.md
docs/i18n/de/: EQUIVALENT_DOCSET.md
docs/i18n/es/: EQUIVALENT_DOCSET.md
docs/i18n/fr/: EQUIVALENT_DOCSET.md
docs/i18n/hi/: EQUIVALENT_DOCSET.md
docs/i18n/id/: EQUIVALENT_DOCSET.md
docs/i18n/ja/: EQUIVALENT_DOCSET.md
docs/i18n/ko/: EQUIVALENT_DOCSET.md
docs/i18n/pt-BR/: EQUIVALENT_DOCSET.md
docs/i18n/ru/: EQUIVALENT_DOCSET.md
docs/i18n/th/: EQUIVALENT_DOCSET.md
docs/i18n/vi/: EQUIVALENT_DOCSET.md
docs/i18n/zh-CN/: EQUIVALENT_DOCSET.md
docs/i18n/zh-TW/: EQUIVALENT_DOCSET.md
examples/: quickstart_demo.py  run_request.error_scan.json  run_request.genesis_demo_hello.json  run_request.genesis_policy_codegen.json  run_request.gpu_metrics.json  run_request.gpu_smoke.json  run_request.missing_tool_autostub.json  test.csv
examples/policy_drivers/: README.md  hello_policy.py  llm_http_policy.py
goalpacks/demo_missing_tool/: manifest.json
goalpacks/error_scan/: manifest.json
goalpacks/genesis_demo_hello/: manifest.json
goalpacks/gpu_metrics/: manifest.json
goalpacks/gpu_smoke/: manifest.json
machina_autonomic/: __init__.py  _autoapprove.py  _constants.py  _engine.py  _engine_burst.py  _engine_levels.py  _engine_ops.py  _random_stimulus.py  _sq.py  _stimulus.py  _web.py
policies/: chat_driver.py  chat_driver_util.py  chat_intent_map.py  chat_llm.py
runner/: cmd_autopilot.cpp  cmd_autopilot.h  cmd_chat.cpp  cmd_chat.h  cmd_replay.cpp  cmd_replay.h  cmd_run.cpp  cmd_run.h  cmd_serve.cpp  cmd_serve.h  main.cpp  runner_utils.cpp  runner_utils.h  serve_http.h  tool_setup.cpp  tool_setup.h
schemas/: goalpack.schema.json  log_event.schema.json  toolpack.schema.json  viewspec.schema.json
scripts/: build_fast.sh  cts_check.sh  curl_enqueue_signed.sh  doctor.sh  export_github_ready.sh  install_deps.sh  machina_sign.py  ops_detect.sh  ops_healthcheck.sh  ops_kill.sh  ops_restart.sh  ops_start.sh  replay_latest.sh  replay_strict_latest.sh  run_bot_forever.sh  run_demo.sh  run_full_crunch.sh  run_guardrails.sh  run_test_catalog.sh  security_guardrails.py  validate_aid_refs.py  validate_docs_refs.py  validate_permission_policy.py  work_memory_maintenance.py
tests/: test_autonomic_auto_approve.py  test_common.h  test_config.cpp  test_cpq.cpp  test_curiosity_fallback.py  test_evolution_governance.py  test_goal_registry.cpp  test_guardrail_scripts.py  test_input_safety.cpp  test_lease.cpp  test_mcp_plan_safety.py  test_memory.cpp  test_memory_query.cpp  test_ops_scripts.py  test_permission_manifest_policy.py  test_plugin_hash.cpp  test_pulse_flow.py  test_pulse_guards.py  test_python_guards.py  test_replay_strict_integration.py  test_sandbox.cpp  test_sq_meaningfulness.py  test_toolhost.cpp  test_tx.cpp  test_tx_patch_apply.cpp  test_wal.cpp  test_wal_rotation.cpp
tests/plugins/: test_tool_plugin.cpp
toolhost/: main.cpp
toolpacks/runtime_genesis/src/: chain_test.cpp  cpuTemperatureChecker.cpp  cpu_temp_checker.cpp  file_patch.cpp  replay_test_tool.cpp  sys_health.cpp  test_cpu_temp.cpp  test_genesis_e2e.cpp  web_fetch.cpp  web_js.cpp
toolpacks/runtime_genesis/src/self_test_calc/: README.md  main.cpp
toolpacks/runtime_genesis/src/sys_health/: main.cpp
toolpacks/runtime_genesis/src/sys_monitor/: main.cpp  sys_monitor.cpp
toolpacks/runtime_genesis/templates/: hello_tool.cpp
toolpacks/tier0/: manifest.json
tools/embed/: embed_e5.py
tools/tier0/: embed_tools.cpp  error_scan.cpp  fs_tools.cpp  genesis.cpp  genesis.h  gpu_metrics.cpp  gpu_smoke.cpp  http_get.cpp  memory_append.cpp  memory_query.cpp  memory_tools_base.h  meta.cpp  proc_metrics.cpp  proc_metrics.h  queue_tools.cpp  report_summary.cpp  runlog_tools.cpp  shell_exec.cpp  vectordb_tools.cpp  vectordb_tools.h
